--- a/SourceCode/trainingFSD/.project
+++ b/SourceCode/trainingFSD/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>fsdtraining</name>
+	<name>trainingFSD</name>
 	<comment></comment>
 	<projects>
 	</projects>
